fix column gap

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@
     max-width: 840px;
     display: grid;
     grid-template-columns: 3fr 1fr;
+    column-gap: 1rem;
   }
 
   aside h3 {
